--- a/index.html
+++ b/index.html
@@ -1,12 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Galaxy-comerce</title>
+
 </head>
+
 <body>
-    <h1>HOLAA</h1>
-    <script src="action.js"></script>
+    <header>
+        <div class="navbar">
+            <div class="menu">
+
+                <nav>
+                    <ul class="navbar__list">
+                        <li><a href="index.html"> Inicio</a></li>
+                        <li><a href="productos.html">Nuestros productos</a></li>
+                        <li><a>Contacto</a></li>
+                        <li><a>Donde esta mi pedido?</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="logo">
+                <div class="logo__img">
+                    <img src="img/logo galaxy shop.jpg">
+                </div>
+                <span class="logo__txt">
+                    <p>Galaxy-comerce </p>
+                </span>
+            </div>
+
+            <div class="carrito">
+                <div class="carrito__icono">
+                    <a href="carrito.html" class="carrt__ico">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
+                </div>
+                <div class="carrito__cantidad">
+                    <span>0</span>
+                </div>
+            </div>
+    </header>
+    <div class="banner">
+        <div class=" banner__content">
+            <div class="banner__txt">
+                <h1 class="prueba"> Galaxy-comerce</h1>
+                <p>Eleginos yá no te pierdas esta oportunidad</p>
+            </div>
+            <a href="productos.html">
+                <button class="btn">
+                    <span class="transition"> </span>
+                    <p>Ver todos los productos:</p>
+                </button>
+            </a>
+        </div>
+    </div>
+
+    <div class="banner__container swiper mySwiper">
+
+
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+
+                <img src="img/Carrousel 1.avif">
+
+            </div>
+            <div class="swiper-slide">
+
+                <img src="img/Carrousel 2.jpg">
+
+            </div>
+            <div class="swiper-slide">
+                <img src="img/Carrousel 3.webp">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/Carrousel 4.jpg">
+            </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+    </div>
+    <main class="nose">
+
+    </main>
+
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            spaceBetween: 15,
+            centeredSlides: true,
+            autoplay: {
+                delay: 2700,
+                disableOnInteraction: false,
+            },
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
+
+    <script src="index.js"></script>
 </body>
+
 </html>
