--- a/carrito.html
+++ b/carrito.html
@@ -9,19 +9,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Galaxy-comerce</title>
 </head>
 
 <body>
     <header>
         <div class="navbar">
+            <div class="btn__menu">
+                <i class="fa-solid fa-bars menu__navbar"></i>
+            </div>
+            <div class="drk__bg"></div>
             <div class="menu">
 
-                <nav>
+                <nav class="nav">
+                    <div class="x">
+                        <i class="fa-solid fa-xmark"></i>
+                    </div>
                     <ul class="navbar__list">
                         <li><a href="index.html"> Inicio</a></li>
                         <li><a href="productos.html">Nuestros productos</a></li>
-                        <li><a>Contacto</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                         <li><a>Donde esta mi pedido?</a></li>
                     </ul>
                 </nav>
@@ -45,11 +54,9 @@
                     <span>0</span>
                 </div>
             </div>
-        </div>
     </header>
-
     <div class="container__general">
-        <aside class="filtros">
+        <aside class="filtros close">
             <div class="top__menu">
                 <div class="menu__left">
                     <a href="index.html">
@@ -63,82 +70,151 @@
                 </a>
             </div>
             <i class="fa-solid fa-caret-right flecha"></i>
-    </div>
-    <div class="menu">
-        <ul class="filtros_lista">
-            <a href="productos.html" class="bton__regresar">
-                <li class="filtro__title" id="extra">
-                    <div class="ico">
-                        <i class="fa-solid fa-arrow-turn-up arrow"></i>
+
+            <div class="menu">
+                <ul class="filtros_lista">
+                    <a href="productos.html" class="bton__regresar">
+                        <li class="filtro__title" id="extra">
+                            <div class="ico">
+                                <i class="fa-solid fa-arrow-turn-up arrow"></i>
+                            </div>
+
+                            <div class="filter__title__text" id="bton__regresar">
+                                <p id="sinHover">Continuar con la compra </p>
+                            </div>
+                        </li>
+                    </a>
+                    <li class="filer__links" id="todos">
+                        <div class="ico">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </div>
+
+                        <div class="filter__text">
+                            <p>Carrito</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </aside>
+
+        <main class="general__container">
+            <div class="carrito__container">
+
+            </div>
+            <div class="resumen__compra">
+                <h3>Resumen de compra:</h3>
+
+                <div class="cantidad__productos">
+                    <div class="cantidad">
+                        <p>Productos(<span class="cantidad--productos">0</span>) </p>
                     </div>
-
-                    <div class="filter__title__text" id="bton__regresar">
-                        <p id="sinHover">Continuar con la compra </p>
+                    <div class="total__productos">
+                        <span class="cantidad--precio">$0</span>
                     </div>
-                </li>
-            </a>
-            <li class="filer__links" id="todos">
-                <div class="ico">
-                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+                <div class="total__precio">
+                    <div class="texto-total">
+                        <p>Total</p>
+                    </div>
+                    <div class="precio-total">
+                        <span class="precio--final">$0</span>
+                    </div>
                 </div>
 
-                <div class="filter__text">
-                    <p>Carrito</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-    </aside>
-
-    <main class="general__container">
-        <div class="carrito__container">
-
-        </div>
-        <div class="resumen__compra">
-            <h3>Resumen de compra:</h3>
-
-            <div class="cantidad__productos">
-                <div class="cantidad">
-                    <p>Productos(<span class="cantidad--productos">0</span>) </p>
-                </div>
-                <div class="total__productos">
-                    <span class="cantidad--precio">$0</span>
-                </div>
-            </div>
-            <div class="total__precio">
-                <div class="texto-total">
-                    <p>Total</p>
-                </div>
-                <div class="precio-total">
-                    <span class="precio--final">$0</span>
-                </div>
-            </div>
-
-            <div class="finalizar__compra">
-                <button class="final--compra">
-                    <span class="circle"></span>
-                    <p>Finalizar Compra</p>
-                </button>
-            </div>
-        </div>
-
-    </main>
-    <section class="mensaje__carrito__vacio">
-        <div class="mensaje__carrito__vacio--contenedor">
-            <h1>Lo sentimos, tu carrito esta vacío</h1>
-            <i class="fa-regular fa-face-frown"></i>
-            <div class="volver__comprar">
-                <a href="productos.html">
-                    <button class="carrito--vacio">
+                <div class="finalizar__compra">
+                    <button class="final--compra">
                         <span class="circle"></span>
-                        <p>Agregar productos</p>
+                        <p>Finalizar Compra</p>
                     </button>
-                </a>
+                </div>
             </div>
+
+        </main>
+        <section class="mensaje__carrito__vacio">
+            <div class="mensaje__carrito__vacio--contenedor">
+                <h1>Lo sentimos, tu carrito esta vacío</h1>
+                <i class="fa-regular fa-face-frown"></i>
+                <div class="volver__comprar">
+                    <a href="productos.html">
+                        <button class="carrito--vacio">
+                            <span class="circle"></span>
+                            <p>Agregar productos</p>
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer>
+        <div class="footer__content">
+            <div class="enlaces__top">
+                <div class="title">
+                    <h3>Secciones de interes</h3>
+                </div>
+
+                <div class="enlaces">
+                    <a href="#">Contacto</a>
+                    <a href="#">Donde esta mi pedido?</a>
+                    <a href="productos.html">Productos</a>
+                    <a href="index.html">Inicio</a>
+                </div>
+            </div>
+            <div class="enlaces__content">
+                <div class="contactanos">
+                    <div class="title">
+                        <span class="resaltado__title">Contactanos</span>
+                    </div>
+                    <div class="telefono__horario">
+                        <p><span class="resaltado">Telefono: </span>3487152346</p>
+                        <p><span class="resaltado">Horarios: </span>Lunes a Sabados, 10:00 - 19:00</p>
+                    </div>
+                    <div class="redes__sociales">
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-tiktok"></i>
+                        <i class="fa-brands fa-pinterest"></i>
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </div>
+                </div>
+                <div class="cuenta">
+                    <span class="resaltado__title cuenta__title">Tu cuenta: </span>
+                    <div class="caja">
+                        <a href="#">Iniciar sesión</a>
+                    </div>
+                    <div class="caja">
+                        <a href="carrito.html">Carrito de Compras</a>
+                    </div>
+                    <div class="caja"><a href="#">Wishlist</a></div>
+                    <div class="caja"><a href="#">Tracking de pedidos</a></div>
+                </div>
+
+                <div class="metodos_pago">
+                    <span class="resaltado__title">Métodos de pago: </span>
+                    <div class="metodos_pago--img">
+                        <div class="box" id="mp">
+                            <img src="img/mp.png">
+                        </div>
+                        <div class="box">
+                            <img src="img/visa.svg">
+                        </div>
+                        <div class="box">
+                            <img src="img/credit-card.svg">
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="rigths__reserved">
+                <i class="fa-regular fa-copyright"></i>
+                <span class="rigths">Todos los derechos reservados</span>
+            </div>
+
         </div>
-    </section>
+    </footer>
+
 
     <script src="carrito.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
