--- a/productos.html
+++ b/productos.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    
     <title>Galaxy-comerce</title>
 
 </head>
@@ -16,13 +18,20 @@
 <body>
     <header>
         <div class="navbar">
+            <div class="btn__menu">
+                <i class="fa-solid fa-bars menu__navbar"></i>
+            </div>
+            <div class="drk__bg"></div>
             <div class="menu">
 
-                <nav>
+                <nav class="nav">
+                    <div class="x">
+                        <i class="fa-solid fa-xmark"></i>
+                    </div>
                     <ul class="navbar__list">
                         <li><a href="index.html"> Inicio</a></li>
                         <li><a href="productos.html">Nuestros productos</a></li>
-                        <li><a>Contacto</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                         <li><a>Donde esta mi pedido?</a></li>
                     </ul>
                 </nav>
@@ -48,7 +57,8 @@
             </div>
     </header>
     <div class="container__general">
-        <aside class="filtros">
+
+        <aside class="filtros close">
             <div class="top__menu">
                 <div class="menu__left">
                     <a href="index.html">
@@ -62,63 +72,141 @@
                 </a>
             </div>
             <i class="fa-solid fa-caret-right flecha"></i>
+
+            <div class="menu">
+                <ul class="filtros_lista">
+                    <li class="filtro__title" id="extra">
+                        <div class="ico">
+                            <i class="fa-solid fa-sliders"></i>
+                        </div>
+
+                        <div class="filter__title__text">
+                            <p id="sinHover">Filtros: </p>
+                        </div>
+                    </li>
+                    <li class="filer__links" id="todos">
+                        <div class="ico">
+                            <i class="fa-solid fa-hand-point-right"></i>
+                        </div>
+
+                        <div class="filter__text">
+                            <p>Todos los productos</p>
+                        </div>
+                    </li>
+                    <li class="filer__links" id="lampara">
+                        <div class="ico">
+                            <i class="fa-solid fa-menorah"></i>
+                        </div>
+                        <div class="filter__text">
+                            <p>Lámparas</p>
+                        </div>
+                    </li>
+                    <li class="filer__links" id="LED">
+                        <div class="ico">
+                            <i class="fa-regular fa-lightbulb"></i>
+                        </div>
+                        <div class="filter__text">
+                            <p>Led</p>
+                        </div>
+                    </li>
+                    <li class="filer__links" id="proyector">
+                        <div class="ico">
+                            <i class="fa-solid fa-camera-retro"></i>
+                        </div>
+                        <div class="filter__text">
+                            <p>Proyectores</p>
+                        </div>
+
+                    </li>
+                </ul>
+            </div>
+        </aside>
+
+        <main class="overflow">
+            <div class="card__container">
+
+            </div>
+
+        </main>
     </div>
-    <div class="menu">
-        <ul class="filtros_lista">
-            <li class="filtro__title" id="extra">
-                <div class="ico">
-                    <i class="fa-solid fa-sliders"></i>
-                </div>
 
-                <div class="filter__title__text">
-                    <p id="sinHover">Filtros: </p>
-                </div>
-            </li>
-            <li class="filer__links" id="todos">
-                <div class="ico">
-                    <i class="fa-solid fa-hand-point-right"></i>
-                </div>
-
-                <div class="filter__text">
-                    <p>Todos los productos</p>
-                </div>
-            </li>
-            <li class="filer__links" id="lampara">
-                <div class="ico">
-                    <i class="fa-solid fa-menorah"></i>
-                </div>
-                <div class="filter__text">
-                    <p>Lámparas</p>
-                </div>
-            </li>
-            <li class="filer__links" id="LED">
-                <div class="ico">
-                    <i class="fa-regular fa-lightbulb"></i>
-                </div>
-                <div class="filter__text">
-                    <p>Led</p>
-                </div>
-            </li>
-            <li class="filer__links" id="proyector">
-                <div class="ico">
-                    <i class="fa-solid fa-camera-retro"></i>
-                </div>
-                <div class="filter__text">
-                    <p>Proyectores</p>
-                </div>
-
-            </li>
-        </ul>
+    <!-- =======================================TOAST================================================ -->
+    <div class="toast__container">
     </div>
-    </aside>
 
-    <main>
-        <div class="card__container">
+    <footer>
+        <div class="footer__content">
+            <div class="enlaces__top">
+                <div class="title">
+                    <h3>Secciones de interes</h3>
+                </div>
+
+                <div class="enlaces">
+                    <a href="#">Contacto</a>
+                    <a href="#">Donde esta mi pedido?</a>
+                    <a href="productos.html">Productos</a>
+                    <a href="index.html">Inicio</a>
+                </div>
+            </div>
+            <div class="enlaces__content">
+                <div class="contactanos">
+                    <div class="title">
+                        <span class="resaltado__title">Contactanos</span>
+                    </div>
+                    <div class="telefono__horario">
+                        <p><span class="resaltado">Telefono: </span>3487152346</p>
+                        <p><span class="resaltado">Horarios: </span>Lunes a Sabados, 10:00 - 19:00</p>
+                    </div>
+                    <div class="redes__sociales">
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-tiktok"></i>
+                        <i class="fa-brands fa-pinterest"></i>
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </div>
+                </div>
+                <div class="cuenta">
+                    <span class="resaltado__title cuenta__title">Tu cuenta: </span>
+                    <div class="caja">
+                        <a href="#">Iniciar sesión</a>
+                    </div>
+                    <div class="caja">
+                        <a href="carrito.html">Carrito de Compras</a>
+                    </div>
+                    <div class="caja"><a href="#">Wishlist</a></div>
+                    <div class="caja"><a href="#">Tracking de pedidos</a></div>
+                </div>
+
+                <div class="metodos_pago">
+                    <span class="resaltado__title">Métodos de pago: </span>
+                    <div class="metodos_pago--img">
+                        <div class="box" id="mp">
+                            <img src="img/mp.png">
+                        </div>
+                        <div class="box">
+                            <img src="img/visa.svg">
+                        </div>
+                        <div class="box">
+                            <img src="img/credit-card.svg">
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="rigths__reserved">
+                <i class="fa-regular fa-copyright"></i>
+                <span class="rigths">Todos los derechos reservados</span>
+            </div>
+
         </div>
-    </main>
-    </div>
+    </footer>
+    
+
 
     <script src="action.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+
 </body>
 
 </html>
