--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <title>Galaxy-comerce</title>
 </head>
 
@@ -68,24 +71,56 @@
                         exercitationem debitis temporibus minima. Amet quidem nobis dignissimos vel!</p>
                 </div>
             </div>
-            <form>
+            <form id="form__contacto">
                 <div class="inputs__top">
-                    <div class="input__box">
-                        <input placeholder="Nombre">
+                    <div class="input__box margin nombre">
+
+                        <input class="input__form" id="nombre" name="nombre" placeholder="Nombre" type="text" required>
+                        <span id="msj__error-nombre" class="msj__error">*El Nombre no puede poseer ningun número ni
+                            símbolo*</span>
                     </div>
-                    <div class="input__box">
-                        <input placeholder="Correo Electrónico">
+                    <div class="input__box correo">
+
+                        <input class="input__form" id="correo" placeholder="Correo Electrónico" name="correo"
+                            type="email" required>
+                        <span id="msj__error-correo" class="msj__error">*Escribe un correo eléctronico válido*</span>
                     </div>
 
                 </div>
                 <div class="input__box">
-                    <input placeholder="Numero de celular" type="number">
+
+                    <input class="input__form" id="telefono" placeholder="Numero de celular" name="telefono"
+                        type="number">
+                    <span id="msj__error-telefono" class="msj__error">*Escribe un numero de telefono Válido*</span>
 
                 </div>
                 <div class="input__box">
-                    <textarea placeholder="Mensaje"></textarea>
+
+                    <textarea class="input__form" id="msj" placeholder="Mensaje" name="msj"></textarea>
+                    <span id="msj__error-area" class="msj__error">*El mensaje debe contener al menos 10
+                        caracteres*</span>
                 </div>
 
+                <div id="error__msj">
+                    <div class="error__msj--content">
+                        <div class="icon__msj">
+                            <div class="icon__wrong">
+                                <i class="fa-solid fa-circle-exclamation"></i>
+                            </div>
+                            <div class="msj__error">
+                                <p>Completa correctamente el formulario</p>
+                            </div>
+                        </div>
+
+                        <div id="icon__x">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="button__sumbit">
+                    <button type="submit" class="button">Enviar</button>
+                </div>
             </form>
         </div>
     </main>
