--- a/index.html
+++ b/index.html
@@ -294,10 +294,11 @@
                         <p><span class="resaltado">Horarios: </span>Lunes a Sabados, 10:00 - 19:00</p>
                     </div>
                     <div class="redes__sociales">
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-tiktok"></i>
-                        <i class="fa-brands fa-pinterest"></i>
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <a href="https://www.instagram.com/osky_cabral/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://www.linkedin.com/in/cabral-oscar/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                 </div>
                 <div class="cuenta">
@@ -332,6 +333,9 @@
             <div class="rigths__reserved">
                 <i class="fa-regular fa-copyright"></i>
                 <span class="rigths">Todos los derechos reservados</span>
+            </div>
+            <div class="rigths__osky">
+                <span class="my">Made by <a href="https://www.linkedin.com/in/cabral-oscar/">Oscar Cabral</a></span>
             </div>
 
         </div>
